# icelandic-handwritten-ocr-benchmark

./: README.md  main.py  push_to_hub.py  pyproject.toml  requirements.txt  scraper.py  upload_dataset.py
