[project]
name = "icelandic-handwritten-ocr-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "lxml>=6.1.1",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "tqdm>=4.68.2",
]
